Fixed BP text overflow on leaderboard

--- a/styles/index.css
+++ b/styles/index.css
@@ -3166,7 +3166,7 @@ body.loaded #window .banner:hover .banner_foreground {
     right: 10px;
     font-size: 9px;
     line-height: 9px;
-    width: 400px;
+    width: 420px;
     text-transform: none;
     color: #DEDEDE;
 }
